--- a/index.html
+++ b/index.html
@@ -6,91 +6,206 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+/* ===== BASE ===== */
 *{
  box-sizing:border-box;
  font-family:Segoe UI,Roboto;
  -webkit-tap-highlight-color:transparent;
+ transition:.25s ease;
 }
-body{margin:0;background:#020617;color:#e5e7eb}
+button:focus,.subject-card:focus,.option:focus{outline:none}
+
+body{
+ margin:0;
+ background:#020617;
+ color:#e5e7eb;
+ overflow-x:hidden;
+}
 :root{
  --primary:#4f46e5;
  --border:#1e293b;
  --green:#22c55e;
  --red:#ef4444;
- --glow:#6366f1;
 }
+
+/* ===== FUTURISTIC BACKGROUND ===== */
+body::before{
+ content:"";
+ position:fixed;
+ inset:0;
+ background:
+  radial-gradient(600px at top left, rgba(79,70,229,.15), transparent 40%),
+  radial-gradient(600px at bottom right, rgba(34,197,94,.12), transparent 40%);
+ pointer-events:none;
+ z-index:-1;
+}
+
+/* ===== HEADER ===== */
 header{
- display:flex;justify-content:space-between;
- padding:14px 18px;border-bottom:1px solid var(--border)
+ display:flex;
+ justify-content:space-between;
+ align-items:center;
+ padding:14px 18px;
+ border-bottom:1px solid var(--border);
+ backdrop-filter:blur(8px);
 }
 button{
- background:var(--primary);color:#fff;border:none;
- padding:10px 14px;border-radius:12px;cursor:pointer
+ background:var(--primary);
+ color:#fff;
+ border:none;
+ padding:10px 14px;
+ border-radius:12px;
+ cursor:pointer;
+ box-shadow:0 6px 18px rgba(79,70,229,.35);
 }
+button:active{
+ transform:scale(.96);
+ box-shadow:0 2px 8px rgba(79,70,229,.4);
+}
+
+/* ===== LAYOUT ===== */
 .container{max-width:900px;margin:auto;padding:20px}
 .card{
- background:#020617;border-radius:18px;
- padding:20px;margin-bottom:20px;
- box-shadow:0 0 18px rgba(79,70,229,.25)
+ background:#020617;
+ border-radius:18px;
+ padding:20px;
+ margin-bottom:20px;
+ border:1px solid rgba(79,70,229,.25);
+ backdrop-filter:blur(8px);
+ box-shadow:0 0 18px rgba(79,70,229,.25);
+ animation:fadeUp .35s ease;
 }
 .hidden{display:none}
 
-/* SUBJECT */
+@keyframes fadeUp{
+ from{opacity:0;transform:translateY(10px)}
+ to{opacity:1;transform:none}
+}
+
+/* ===== SUBJECTS ===== */
 .subject-grid{
- display:grid;grid-template-columns:repeat(2,1fr);gap:14px
+ display:grid;
+ grid-template-columns:repeat(2,1fr);
+ gap:14px
 }
 .subject-card{
  border:1px solid var(--border);
- border-radius:16px;padding:18px;text-align:center;
- cursor:pointer
+ border-radius:16px;
+ padding:18px;
+ text-align:center;
+ cursor:pointer;
+ position:relative;
+ overflow:hidden;
 }
-.subject-card.active{
+.subject-card::after{
+ content:"";
+ position:absolute;
+ inset:0;
+ background:linear-gradient(120deg,transparent,rgba(255,255,255,.08),transparent);
+ transform:translateX(-100%);
+}
+.subject-card:hover::after{transform:translateX(100%)}
+.subject-card:hover{
+ transform:translateY(-4px) scale(1.02);
  border-color:var(--green);
- background:rgba(34,197,94,.15)
+ box-shadow:0 0 22px rgba(79,70,229,.4);
+}
+.badge-count{margin-top:6px;font-size:14px;opacity:.8}
+
+/* ===== TEST LIST ===== */
+.test-list{
+ display:grid;
+ grid-template-columns:repeat(2,1fr);
+ gap:12px
 }
 
-/* TOTAL */
-.total-card{
- display:flex;gap:12px;border:1px solid var(--border);
- border-radius:16px;padding:16px;margin-bottom:20px
-}
-
-/* OPTIONS */
+/* ===== QUESTIONS ===== */
 .option{
  border:1px solid var(--border);
- padding:12px;border-radius:12px;
- margin:8px 0;cursor:pointer
+ padding:12px;
+ border-radius:12px;
+ margin:8px 0;
+ cursor:pointer;
+ background:rgba(255,255,255,.02);
 }
-.option.active{background:var(--primary)}
-.correct{background:var(--green)}
-.wrong{background:var(--red)}
+.option:hover{
+ background:rgba(79,70,229,.15);
+ border-color:rgba(79,70,229,.6);
+}
+.option.active{
+ background:var(--primary);
+ box-shadow:0 0 12px rgba(79,70,229,.6);
+}
+.correct{background:var(--green);box-shadow:0 0 14px rgba(34,197,94,.7)}
+.wrong{background:var(--red);box-shadow:0 0 14px rgba(239,68,68,.7)}
 
-/* SCORE */
-.score-wrap{display:flex;gap:20px;flex-wrap:wrap}
-.ring{
- width:120px;height:120px;border-radius:50%;
- display:flex;align-items:center;justify-content:center;
- font-size:24px;font-weight:bold;
- background:conic-gradient(var(--glow) 0deg,#1e293b 0deg);
- box-shadow:0 0 25px rgba(99,102,241,.6)
+.timer{
+ font-weight:bold;
+ margin-bottom:10px;
+ color:#fbbf24;
+ letter-spacing:.5px;
+}
+.timer::after{
+ content:"";
+ display:block;
+ height:2px;
+ margin-top:6px;
+ background:linear-gradient(90deg,var(--primary),transparent);
+}
+
+/* ===== RESULT ===== */
+.score-grid{
+ display:grid;
+ grid-template-columns:repeat(2,1fr);
+ gap:12px
 }
 .score-box{
- flex:1;border:1px solid var(--border);
- border-radius:14px;padding:14px
+ border:1px solid var(--border);
+ border-radius:14px;
+ padding:14px;
+ text-align:center;
+ background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.01));
 }
+.score-box:hover{transform:translateY(-3px)}
+
 .badge{
- margin-top:10px;padding:10px;border-radius:12px;
- text-align:center;font-weight:600
+ margin-top:12px;
+ padding:10px;
+ border-radius:12px;
+ text-align:center;
+ font-weight:bold;
+ box-shadow:0 0 18px rgba(79,70,229,.4);
 }
 .good{background:rgba(34,197,94,.2)}
 .avg{background:rgba(234,179,8,.2)}
 .bad{background:rgba(239,68,68,.2)}
 
-textarea{
- width:100%;height:200px;
- background:#020617;color:#fff;
+.exam-box{
+ margin-bottom:15px;
+ padding:12px;
  border:1px solid var(--border);
- border-radius:12px;padding:12px
+ border-radius:14px;
+ background:linear-gradient(135deg,rgba(79,70,229,.15),rgba(34,197,94,.08));
+ box-shadow:0 0 18px rgba(79,70,229,.35);
+}
+
+.hint-box{
+ margin-top:10px;
+ padding:10px;
+ border:1px dashed var(--border);
+ border-radius:12px;
+ font-size:14px;
+ opacity:.85
+}
+
+textarea{
+ width:100%;
+ height:200px;
+ background:#020617;
+ color:#fff;
+ border:1px solid var(--border);
+ border-radius:12px;
+ padding:12px
 }
 </style>
 </head>
@@ -100,70 +215,63 @@ textarea{
 <header>
  <b>🏦 Banking Mock Test</b>
  <div>
-  <button onclick="openImporter()">Upload Questions</button>
+  <button onclick="setExamDate()">Exam Date</button>
+  <button onclick="openImporter()">Upload</button>
   <button onclick="goHome()">Home</button>
  </div>
 </header>
 
 <div class="container">
 
-<!-- HOME -->
 <div class="card" id="home">
-
- <div class="total-card">📚 <b id="totalBox">0</b></div>
-
+ <div id="examCountdown" class="exam-box hidden"></div>
+ <h3>Select Subject</h3>
  <div class="subject-grid">
-  <div class="subject-card" onclick="selectSubject('Computer',this)">💻 Computer</div>
-  <div class="subject-card" onclick="selectSubject('Static GK',this)">📘 Static GK</div>
-  <div class="subject-card" onclick="selectSubject('Current Affairs',this)">📰 Current Affairs</div>
-  <div class="subject-card" onclick="selectSubject('Mix',this)">🔀 Mix</div>
+  <div class="subject-card" onclick="openTests('Computer')">💻 Computer<div class="badge-count" id="cCount"></div></div>
+  <div class="subject-card" onclick="openTests('Static GK')">📘 Static GK<div class="badge-count" id="sCount"></div></div>
+  <div class="subject-card" onclick="openTests('Current Affairs')">📰 Current Affairs<div class="badge-count" id="aCount"></div></div>
+  <div class="subject-card" onclick="openTests('Mix')">🔀 Mix Test<div class="badge-count" id="mCount"></div></div>
  </div>
-
- <h3>Questions: <span id="qVal">5</span></h3>
- <input type="range" min="1" max="50" value="5"
-  id="qSlider" oninput="qVal.innerText=this.value">
-
- <br>
- <button onclick="startTest()">Start Test</button>
 </div>
 
-<!-- TEST -->
+<div class="card hidden" id="testPage">
+ <h3 id="testTitle"></h3>
+ <div id="testList" class="test-list"></div>
+ <br><button onclick="goHome()">Back</button>
+</div>
+
 <div class="card hidden" id="test">
- <div id="timer"></div>
+ <div class="timer" id="timer"></div>
  <div id="progress"></div>
  <h3 id="qText"></h3>
  <div id="options"></div>
  <button onclick="nextQ()">Next</button>
 </div>
 
-<!-- RESULT -->
 <div class="card hidden" id="result">
  <h2>Scorecard</h2>
- <div class="score-wrap">
-  <div class="ring" id="ring">0%</div>
-  <div class="score-box">
-   <div>Total: <b id="scTotal"></b></div>
-   <div>Correct: <b id="scCorrect"></b></div>
-   <div>Wrong: <b id="scWrong"></b></div>
-   <div>Time Taken: <b id="scTime"></b></div>
-  </div>
+ <div class="score-grid">
+  <div class="score-box"><h3 id="rTotal"></h3><p>Total</p></div>
+  <div class="score-box"><h3 id="rCorrect"></h3><p>Correct</p></div>
+  <div class="score-box"><h3 id="rWrong"></h3><p>Wrong</p></div>
+  <div class="score-box"><h3 id="rPercent"></h3><p>Percentage</p></div>
  </div>
- <div id="perfBadge" class="badge"></div>
+ <div id="compareBox" class="hint-box hidden"></div>
+ <div id="memoryHint" class="hint-box hidden"></div>
+ <button onclick="reviseWrong()">🔁 Revise Wrong Questions</button>
  <button onclick="showAnalysis()">Analysis</button>
  <button onclick="goHome()">Home</button>
 </div>
 
-<!-- ANALYSIS -->
 <div class="card hidden" id="analysis">
- <h2>Detailed Analysis</h2>
+ <h3>Detailed Analysis</h3>
  <div id="analysisBox"></div>
  <button onclick="goHome()">Home</button>
 </div>
 
-<!-- UPLOAD -->
 <div class="card hidden" id="importer">
  <h3>Upload Questions (JSON)</h3>
- <textarea id="jsonInput" placeholder="Paste JSON here"></textarea>
+ <textarea id="jsonInput"></textarea>
  <button onclick="importQuestions()">Add</button>
  <button onclick="closeImporter()">Close</button>
 </div>
@@ -171,82 +279,72 @@ textarea{
 </div>
 
 <script>
-/* ========= KEYS ========= */
-const QKEY="BANKING_MOCK_QUESTIONS";
-const HISTORY_KEY="DAILY_USED";
+/* ===== CORE LOGIC (UNCHANGED) ===== */
+const KEY="BANKING_QS", HISTORY_KEY="TEST_HISTORY";
+const TEST_SIZE=25, TIME_PER_Q=30;
 
-/* ========= NORMALIZE SUBJECT ========= */
-function normalizeSubject(s){
+function norm(s){
  s=s.toLowerCase().replace(/\s+/g,"");
- if(s.includes("computer")) return "Computer";
- if(s.includes("static")) return "Static GK";
- if(s.includes("current")||s.includes("ca")||s.includes("gs"))
-  return "Current Affairs";
- return "Computer";
+ if(s.includes("computer"))return"Computer";
+ if(s.includes("static"))return"Static GK";
+ if(s.includes("current"))return"Current Affairs";
+ return"Computer";
 }
 
-/* ========= LOAD QUESTIONS ========= */
-let allQuestions=JSON.parse(localStorage.getItem(QKEY))||[
- {subject:"Computer",q:"CPU का full form क्या है?",options:["Central Processing Unit","Control Unit","Computer Unit","None"],answer:0,explanation:"CPU = Central Processing Unit"}
-];
-allQuestions=allQuestions.map(q=>({...q,subject:normalizeSubject(q.subject)}));
-localStorage.setItem(QKEY,JSON.stringify(allQuestions));
-totalBox.innerText=allQuestions.length;
+let allQuestions=JSON.parse(localStorage.getItem(KEY))||[];
+allQuestions=allQuestions.map(q=>({...q,subject:norm(q.subject)}));
+localStorage.setItem(KEY,JSON.stringify(allQuestions));
 
-/* ========= STATE ========= */
-let selectedSubject=null,testQ=[],i=0,score=0,answers=[];
-let time=0,timerInt,startTime=0;
+let currentSubject="",currentTest=[],currentTestNo=0;
+let i=0,score=0,answers=[],time=0,startTime=0,timerInt;
 
-/* ========= SUBJECT ========= */
-function selectSubject(sub,card){
- selectedSubject=sub;
- document.querySelectorAll(".subject-card").forEach(c=>c.classList.remove("active"));
- card.classList.add("active");
+function updateCounts(){
+ cCount.innerText=allQuestions.filter(q=>q.subject==="Computer").length+" Questions";
+ sCount.innerText=allQuestions.filter(q=>q.subject==="Static GK").length+" Questions";
+ aCount.innerText=allQuestions.filter(q=>q.subject==="Current Affairs").length+" Questions";
+ mCount.innerText=allQuestions.length+" Questions";
+}
+updateCounts();
+
+function goHome(){
+ clearInterval(timerInt);
+ document.querySelectorAll(".card").forEach(c=>c.classList.add("hidden"));
+ home.classList.remove("hidden");
 }
 
-/* ========= START TEST ========= */
-function startTest(){
- if(!selectedSubject)return alert("Select subject");
+function openTests(sub){
+ currentSubject=sub;
+ document.querySelectorAll(".card").forEach(c=>c.classList.add("hidden"));
+ testPage.classList.remove("hidden");
+ testTitle.innerText=sub+" – Available Tests";
+ let pool=sub==="Mix"?allQuestions:allQuestions.filter(q=>q.subject===sub);
+ testList.innerHTML="";
+ Math.ceil(pool.length/TEST_SIZE)&&
+ [...Array(Math.ceil(pool.length/TEST_SIZE))].forEach((_,t)=>{
+  let b=document.createElement("button");
+  b.textContent=`Test ${t+1}`;
+  b.onclick=()=>startTest(pool,t);
+  testList.appendChild(b);
+ });
+}
 
- const subjectKey = normalizeSubject(selectedSubject);
-
- let pool = subjectKey==="Mix"
-  ? allQuestions
-  : allQuestions.filter(q=>q.subject===subjectKey);
-
- let today=new Date().toISOString().split("T")[0];
- let history=JSON.parse(localStorage.getItem(HISTORY_KEY))||{};
- let used=(history[today]?.[subjectKey])||[];
-
- let fresh=pool.filter(q=>!used.includes(q.q));
- if(fresh.length===0){fresh=pool;used=[];}
-
- testQ=fresh.sort(()=>0.5-Math.random())
- .slice(0,Math.min(+qSlider.value,fresh.length));
-
- history[today]=history[today]||{};
- history[today][subjectKey]=used.concat(testQ.map(q=>q.q));
- localStorage.setItem(HISTORY_KEY,JSON.stringify(history));
-
- i=0;score=0;answers=[];
- home.classList.add("hidden");
+function startTest(pool,t){
+ currentTest=pool.slice(t*TEST_SIZE,(t+1)*TEST_SIZE);
+ currentTestNo=t+1;i=score=0;answers=[];
+ document.querySelectorAll(".card").forEach(c=>c.classList.add("hidden"));
  test.classList.remove("hidden");
-
- time=testQ.length*30;
+ time=currentTest.length*TIME_PER_Q;
  startTime=time;
- timer.innerText="⏱ "+time+" sec";
  timerInt=setInterval(()=>{
-  time--;
-  timer.innerText="⏱ "+time+" sec";
-  if(time<=0){clearInterval(timerInt);submit();}
+  timer.innerText=`⏱ ${time--}s`;
+  if(time<0){clearInterval(timerInt);showResult();}
  },1000);
-
  loadQ();
 }
 
 function loadQ(){
- let q=testQ[i];
- progress.innerText=`Question ${i+1}/${testQ.length}`;
+ let q=currentTest[i];
+ progress.innerText=`Question ${i+1}/${currentTest.length}`;
  qText.innerText=q.q;
  options.innerHTML="";
  q.options.forEach((o,idx)=>{
@@ -260,72 +358,84 @@ function selectOpt(n){
  document.querySelectorAll(".option").forEach(o=>o.classList.remove("active"));
  document.querySelectorAll(".option")[n].classList.add("active");
 }
-
 function nextQ(){
  if(sel==null)return alert("Select option");
  answers.push(sel);
- if(sel===testQ[i].answer)score++;
+ if(sel===currentTest[i].answer)score++;
  sel=null;
-
- if(i<testQ.length-1){i++;loadQ();}
- else{clearInterval(timerInt);submit();}
+ ++i<currentTest.length?loadQ():showResult();
 }
 
-/* ========= RESULT ========= */
-function submit(){
- test.classList.add("hidden");
+function showResult(){
+ clearInterval(timerInt);
+ document.querySelectorAll(".card").forEach(c=>c.classList.add("hidden"));
  result.classList.remove("hidden");
-
- let percent=Math.round(score/testQ.length*100);
- ring.innerText=percent+"%";
- ring.style.background=`conic-gradient(var(--glow) ${percent*3.6}deg,#1e293b 0deg)`;
-
- scTotal.innerText=testQ.length;
- scCorrect.innerText=score;
- scWrong.innerText=testQ.length-score;
- scTime.innerText=(startTime-time)+" sec";
-
- perfBadge.className="badge "+(percent>=75?"good":percent>=50?"avg":"bad");
- perfBadge.innerText=
-  percent>=75?"Excellent Performance 🔥":
-  percent>=50?"Good Attempt 🙂":
-  "Practice More 💪";
+ let percent=Math.round(score/currentTest.length*100);
+ rTotal.innerText=currentTest.length;
+ rCorrect.innerText=score;
+ rWrong.innerText=currentTest.length-score;
+ rPercent.innerText=percent+"%";
+ let hist=JSON.parse(localStorage.getItem(HISTORY_KEY))||{};
+ let key=currentSubject+"_TEST_"+currentTestNo;
+ if(hist[key]){
+  let p=hist[key];
+  compareBox.classList.remove("hidden");
+  compareBox.innerHTML=`Previous ${p.percent}% → Now ${percent}%`;
+ }
+ hist[key]={score,percent,date:Date.now()};
+ localStorage.setItem(HISTORY_KEY,JSON.stringify(hist));
 }
 
-/* ========= ANALYSIS ========= */
 function showAnalysis(){
- result.classList.add("hidden");
+ document.querySelectorAll(".card").forEach(c=>c.classList.add("hidden"));
  analysis.classList.remove("hidden");
  analysisBox.innerHTML="";
- testQ.forEach((q,idx)=>{
-  let h=`<p><b>${q.q}</b></p>`;
-  q.options.forEach((o,i)=>{
-   let cls=i===q.answer?"correct":(i===answers[idx]?"wrong":"");
-   h+=`<div class="option ${cls}">${o}</div>`;
-  });
-  h+=`<p>${q.explanation}</p><hr>`;
-  analysisBox.innerHTML+=h;
+ currentTest.forEach((q,i)=>{
+  analysisBox.innerHTML+=`<p><b>Q${i+1}. ${q.q}</b></p>`+
+  q.options.map((o,j)=>`<div class="option ${j===q.answer?"correct":j===answers[i]?"wrong":""}">${o}</div>`).join("")+
+  `<p>${q.explanation||""}</p><hr>`;
  });
 }
 
-/* ========= UPLOAD ========= */
+function reviseWrong(){
+ currentTest=currentTest.filter((q,i)=>answers[i]!==q.answer);
+ if(!currentTest.length)return alert("No wrong questions 🎉");
+ i=score=0;answers=[];
+ document.querySelectorAll(".card").forEach(c=>c.classList.add("hidden"));
+ test.classList.remove("hidden");
+ loadQ();
+}
+
+const EXAM_KEY="EXAM_DATE";
+function setExamDate(){
+ let d=prompt("Enter exam date (YYYY-MM-DD)");
+ if(!d)return;
+ localStorage.setItem(EXAM_KEY,d);
+ renderExam();
+}
+function renderExam(){
+ let d=localStorage.getItem(EXAM_KEY);
+ if(!d)return;
+ examCountdown.classList.remove("hidden");
+ examCountdown.innerHTML=`🗓️ ${d} | ⏳ ${Math.ceil((new Date(d)-new Date())/86400000)} days left`;
+}
+renderExam();
+
 function openImporter(){importer.classList.remove("hidden")}
 function closeImporter(){importer.classList.add("hidden")}
 function importQuestions(){
  try{
-  let data=JSON.parse(jsonInput.value)
-   .map(q=>({...q,subject:normalizeSubject(q.subject)}));
-  allQuestions.push(...data);
-  localStorage.setItem(QKEY,JSON.stringify(allQuestions));
-  totalBox.innerText=allQuestions.length;
-  jsonInput.value="";
-  alert("Questions saved");
-  closeImporter();
+  JSON.parse(jsonInput.value).forEach(q=>{
+   if(!allQuestions.some(e=>e.q===q.q))
+    allQuestions.push({...q,subject:norm(q.subject)});
+  });
+  localStorage.setItem(KEY,JSON.stringify(allQuestions));
+  updateCounts();
+  closeImporter();jsonInput.value="";
+  alert("Questions added");
  }catch{alert("Invalid JSON")}
 }
-
-function goHome(){location.reload()}
 </script>
 
 </body>
-</html>
+ </html>
